--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "@material-ui/core": "^4.11.4",
     "antd": "^4.15.6",
     "axios": "^0.21.1",
     "react": "^17.0.1",
