--- a/package.json
+++ b/package.json
@@ -35,13 +35,16 @@
     "babel-preset-es2015": "^6.24.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-player": "^2.9.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-slick": "^0.28.1",
     "react-transition-group": "^4.4.1",
+    "react-validation": "^3.0.7",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "validator": "^13.6.0"
   }
 }
