--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-preset-es2015": "^6.24.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-id-swiper": "^4.0.0",
     "react-player": "^2.9.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
@@ -45,6 +46,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
+    "swiper": "^6.7.0",
     "validator": "^13.6.0"
   }
 }
