--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.58",
     "antd": "^4.15.6",
     "axios": "^0.21.1",
     "babel-preset-es2015": "^6.24.1",
