--- a/package.json
+++ b/package.json
@@ -11,20 +11,20 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-syntax-jsx": "^7.12.1",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
+    "@babel/core": "^7.14.6",
+    "@babel/plugin-syntax-jsx": "^7.14.5",
+    "@babel/preset-env": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^5.0.1",
+    "css-loader": "^5.2.6",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.0.0-beta.6",
-    "sass": "^1.32.5",
-    "sass-loader": "^10.1.1",
+    "html-webpack-plugin": "^5.3.1",
+    "sass": "^1.35.1",
+    "sass-loader": "^12.1.0",
     "style-loader": "^2.0.0",
-    "webpack": "^5.18.0",
-    "webpack-cli": "^4.7.0",
+    "webpack": "^5.39.1",
+    "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
@@ -32,20 +32,20 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
-    "antd": "^4.15.6",
+    "antd": "^4.16.3",
     "axios": "^0.21.1",
     "babel-preset-es2015": "^6.24.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-id-swiper": "^4.0.0",
     "react-player": "^2.9.0",
-    "react-redux": "^7.2.2",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-slick": "^0.28.1",
-    "react-transition-group": "^4.4.1",
+    "react-transition-group": "^4.4.2",
     "react-validation": "^3.0.7",
-    "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8",
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^6.7.0",
