--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"axios": "^0.21.1",
 		"babel-preset-es2015": "^6.24.1",
 		"react": "^17.0.2",
+		"react-device-detect": "^1.17.0",
 		"react-dom": "^17.0.2",
 		"react-id-swiper": "^4.0.0",
 		"react-player": "^2.9.0",
