--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
 		"babel-loader": "^8.2.2",
 		"clean-webpack-plugin": "^3.0.0",
 		"css-loader": "^5.2.6",
+		"favicons": "^6.2.2",
+		"favicons-webpack-plugin": "^5.0.2",
 		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^5.3.1",
 		"sass": "^1.35.1",
